# reframe

./: .gitignore  README.md  pyproject.toml
examples/: check_faces.py
src/reframe/: __init__.py  audio.py  cli.py  detect.py  path.py  pipeline.py  presets.py  rank.py  render.py  scenes.py  smooth.py  track.py  types.py
src/reframe/asd/: __init__.py  apply.py  backends.py  base.py  contract.py
src/reframe/asd/runners/: _common.py  lrasd_runner.py  talknet_runner.py
tests/: test_asd.py  test_pipeline.py  test_presets.py  test_rank.py  test_render.py  test_smooth.py
